; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/csiostor/extr_csio_hw.c_csio_hw_flash_erase_sectors.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/csiostor/extr_csio_hw.c_csio_hw_flash_erase_sectors.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.csio_hw = type { i32 }

@SF_WR_ENABLE = common dso_local global i32 0, align 4
@SF_ERASE_SECTOR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [43 x i8] c"erase of flash sector %d failed, error %d\0A\00", align 1
@SF_OP_A = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.csio_hw*, i32, i32)* @csio_hw_flash_erase_sectors to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @csio_hw_flash_erase_sectors(%struct.csio_hw* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.csio_hw*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.csio_hw* %0, %struct.csio_hw** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  br label %8

8:                                                ; preds = %35, %3
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp sle i32 %9, %10
  br i1 %11, label %12, label %38

12:                                               ; preds = %8
  %13 = load %struct.csio_hw*, %struct.csio_hw** %4, align 8
  %14 = load i32, i32* @SF_WR_ENABLE, align 4
  %15 = call i32 @csio_hw_sf1_write(%struct.csio_hw* %13, i32 1, i32 0, i32 1, i32 %14)
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %7, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %12
  br label %39

19:                                               ; preds = %12
  %20 = load %struct.csio_hw*, %struct.csio_hw** %4, align 8
  %21 = load i32, i32* @SF_ERASE_SECTOR, align 4
  %22 = load i32, i32* %5, align 4
  %23 = shl i32 %22, 8
  %24 = or i32 %21, %23
  %25 = call i32 @csio_hw_sf1_write(%struct.csio_hw* %20, i32 4, i32 0, i32 1, i32 %24)
  store i32 %25, i32* %7, align 4
  %26 = load i32, i32* %7, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %19
  br label %39

29:                                               ; preds = %19
  %30 = load %struct.csio_hw*, %struct.csio_hw** %4, align 8
  %31 = call i32 @csio_hw_flash_wait_op(%struct.csio_hw* %30, i32 14, i32 500)
  store i32 %31, i32* %7, align 4
  %32 = load i32, i32* %7, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %29
  br label %39

35:                                               ; preds = %29
  %36 = load i32, i32* %5, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %5, align 4
  br label %8

38:                                               ; preds = %8
  br label %39

39:                                               ; preds = %38, %34, %28, %18
  %40 = load i32, i32* %7, align 4
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %42, label %47

42:                                               ; preds = %39
  %43 = load %struct.csio_hw*, %struct.csio_hw** %4, align 8
  %44 = load i32, i32* %5, align 4
  %45 = load i32, i32* %7, align 4
  %46 = call i32 @csio_err(%struct.csio_hw* %43, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i32 %44, i32 %45)
  br label %47

47:                                               ; preds = %42, %39
  %48 = load %struct.csio_hw*, %struct.csio_hw** %4, align 8
  %49 = load i32, i32* @SF_OP_A, align 4
  %50 = call i32 @csio_wr_reg32(%struct.csio_hw* %48, i32 0, i32 %49)
  ret i32 0
}

declare dso_local i32 @csio_hw_sf1_write(%struct.csio_hw*, i32, i32, i32, i32) #1

declare dso_local i32 @csio_hw_flash_wait_op(%struct.csio_hw*, i32, i32) #1

declare dso_local i32 @csio_err(%struct.csio_hw*, i8*, i32, i32) #1

declare dso_local i32 @csio_wr_reg32(%struct.csio_hw*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
